# fastapi-sample

./: .env.example  .flake8  LICENSE  README.md  alembic.ini  auth.py  authentication.py  database.py  dependencies.py  main.py  models.py  pyproject.toml  readme.md  requirements.txt  routes.py  schemas.py  settings.py
auth/: services.py  urls.py
config/: auth.py  database.py  postgres.py  settings.py  test.py
configuration/: sqlalchemy.py
controllers/: jwt.py  posts.py  users.py
frontend/src/: App.jsx
frontend/src/components/: Alert.jsx
migrations/: env.py
migrations/versions/: 94b540128288_add_test_table.py  99fb601d5b6d_remove_test_table.py  9fd9909ac5ec_rename_password_field.py  e9fdc8207c69_set_is_admin_not_nullable.py  ea7365581fc5_initial_migration.py  f15634c43523_add_is_admin_column_to_user_model.py  fc364896203a_initial_migration.py
posts/: models.py  router.py  schema.py  schemas.py  url.py  urls.py
repositories/: jwt.py  users.py
routers/: posts.py  users.py
routes/: users.py
templates/: sample.html
tests/: conftest.py  test_main.py  test_posts.py  test_sample.py
urls/: posts.py  users.py
users/: models.py  router.py  schemas.py  urls.py  users.py
